--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -237,6 +237,14 @@ header .gnb_m,header .gnb_open2{display:none;}
 .input_wrap .ib_comm p{font-size:17px;background:#000;color:#fff;padding:3px;margin-bottom:5px;}
 .input_wrap .input_footer{display:block;}
 
+@media screen and (max-width:640px){
+  .input_wrap{margin-top:60px;}
+  .input_wrap .input_header .input_header_box,
+  .input_wrap .input_body_left,
+  .input_wrap .input_body_right,
+  .input_wrap .input_header .input_image{float:none;width:100%;margin:0;}
+}
+
 /* Devise From */
 .devise{background:#000;height:600px;padding-top:150px;}
 .devise .box{background:#fff;width:50%;height:50%;margin:0 auto;padding:50px;}
