--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -88,9 +88,17 @@
   .on_gadgets .card_wrap .card-body h4{margin:15px 0;}
   /*.on_gadgets .card_wrap .start{top:-45px;}*/
 }
-
+/* For Form */
+.gadget_form{margin-top:250px;}
 .form_border{width:70%;margin:0 auto;}
 .form_border input, .form_border textarea{width:100%;height:50px;margin-bottom:20px;}
 .form_border .form_select{margin-bottom:20px;}
 .form_border .form_btn{width:40%;}
+
+@media screen and (max-width:680px){
+  .gadget_form{margin-top:60px;}
+  .form_border{width:100%;}
+}
+
+
 
