--- a/app/views/recommends/_form.html.erb
+++ b/app/views/recommends/_form.html.erb
@@ -1,4 +1,5 @@
 <div class="layout">
+  <%= render 'shared/header' %>
   <div class="wrap">
     <div class="input_wrap">
       <%= simple_form_for @recommend do |f| %>
