--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -137,6 +137,14 @@
 .cu_wrap .inner .btn>em{float:left;font-size:20px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:30px;}
 .cu_wrap .inner .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:30px;}
 
+.show_more_box h2{margin-bottom:5px;}
+.show_more_ctn{float:left;width:31.33%;margin:0 1% 30px 1%;}
+.show_more_ctn a{text-decoration:none;color:#3d3d3d;}
+.show_more_ctn img{width:100%;height:300px;object-fit:cover;}
+.show_more_ctn em{border-bottom:1px solid #ccc;width:40%;display:block;text-transform:uppercase;}
+.show_more_ctn h3{margin:7px 0 0 0;line-height:1.4;height:2.8em;overflow:hidden;}
+.show_more_ctn p{border-left:5px solid rgba(0,153,102,0.3);padding:10px;}
+
 @media screen and (max-width:640px){
   .cu_wrap{margin-top:60px;}
   .cu_wrap .detitle{margin:0 0 30px 0;}
@@ -154,6 +162,8 @@
   .cu_wrap .inner .btn{margin:10px 0;}
   .cu_wrap .inner .btn>em,
   .cu_wrap .inner .btn>a{font-size:20px;padding:3px 20px;line-height:30px;}
+
+  .show_more_ctn{float:none;width:100%;margin:0 0 30px 0;}
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
@@ -173,6 +183,9 @@
   .cu_wrap .inner>.btn{margin:10px 0;}
   .cu_wrap .inner>.btn>em,
   .cu_wrap .inner>.btn>a{float:left;font-size:17px;line-height:20px;}
+
+  .show_more_ctn{float:left;width:31.33%;margin:0 1% 30px 1%;}
+  .show_more_ctn img{width:100%;height:250px;object-fit:cover;}
 }
 /* End Featured Detail Page */
 
