--- a/app/views/recommends/show.html.erb
+++ b/app/views/recommends/show.html.erb
@@ -25,8 +25,6 @@
           <% end %>
         </div>
 
-        
-            
         <div class="cu_box clearfix">
           <div class="num">
             <p>1</p>
@@ -45,6 +43,21 @@
             <p><%= @recommend.sub_intro_01 %></p>
             <div class="btn clearfix">
               <em>$<%= @recommend.sub_price_01 %></em><a target="_blank" href="<%= @recommend.sub_link_01 %>">Buy Now</a>
+            </div>
+            <div class="related">
+             <script type="text/javascript">
+              amzn_assoc_placement = "adunit0";
+              amzn_assoc_tracking_id = "3628-20";
+              amzn_assoc_ad_mode = "search";
+              amzn_assoc_ad_type = "smart";
+              amzn_assoc_marketplace = "amazon";
+              amzn_assoc_region = "US";
+              amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_01 %>";
+              amzn_assoc_default_category = "All";
+              amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
+              amzn_assoc_design = "in_content";
+              </script>
+              <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
             </div>
           </div>
         </div>
@@ -68,6 +81,21 @@
             <div class="btn clearfix">
               <em>$<%= @recommend.sub_price_02 %></em><a target="_blank" href="<%= @recommend.sub_link_02 %>">Buy Now</a>
             </div>
+            <div class="related">
+             <script type="text/javascript">
+              amzn_assoc_placement = "adunit0";
+              amzn_assoc_tracking_id = "3628-20";
+              amzn_assoc_ad_mode = "search";
+              amzn_assoc_ad_type = "smart";
+              amzn_assoc_marketplace = "amazon";
+              amzn_assoc_region = "US";
+              amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_02 %>";
+              amzn_assoc_default_category = "All";
+              amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
+              amzn_assoc_design = "in_content";
+              </script>
+              <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+            </div>
           </div>
         </div>
 
@@ -89,6 +117,21 @@
             <p><%= @recommend.sub_intro_03 %></p>
             <div class="btn clearfix">
               <em>$<%= @recommend.sub_price_03 %></em><a target="_blank" href="<%= @recommend.sub_link_03 %>">Buy Now</a>
+            </div>
+            <div class="related">
+             <script type="text/javascript">
+              amzn_assoc_placement = "adunit0";
+              amzn_assoc_tracking_id = "3628-20";
+              amzn_assoc_ad_mode = "search";
+              amzn_assoc_ad_type = "smart";
+              amzn_assoc_marketplace = "amazon";
+              amzn_assoc_region = "US";
+              amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_03 %>";
+              amzn_assoc_default_category = "All";
+              amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
+              amzn_assoc_design = "in_content";
+              </script>
+              <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
             </div>
           </div>
         </div>
@@ -112,6 +155,21 @@
             <div class="btn clearfix">
               <em>$<%= @recommend.sub_price_04 %></em><a target="_blank" href="<%= @recommend.sub_link_04 %>">Buy Now</a>
             </div>
+            <div class="related">
+             <script type="text/javascript">
+              amzn_assoc_placement = "adunit0";
+              amzn_assoc_tracking_id = "3628-20";
+              amzn_assoc_ad_mode = "search";
+              amzn_assoc_ad_type = "smart";
+              amzn_assoc_marketplace = "amazon";
+              amzn_assoc_region = "US";
+              amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_04 %>";
+              amzn_assoc_default_category = "All";
+              amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
+              amzn_assoc_design = "in_content";
+              </script>
+              <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+            </div>
           </div>
         </div>
 
@@ -133,6 +191,21 @@
             <p><%= @recommend.sub_intro_05 %></p>
             <div class="btn clearfix">
               <em>$<%= @recommend.sub_price_05 %></em><a target="_blank" href="<%= @recommend.sub_link_05 %>">Buy Now</a>
+            </div>
+            <div class="related">
+             <script type="text/javascript">
+              amzn_assoc_placement = "adunit0";
+              amzn_assoc_tracking_id = "3628-20";
+              amzn_assoc_ad_mode = "search";
+              amzn_assoc_ad_type = "smart";
+              amzn_assoc_marketplace = "amazon";
+              amzn_assoc_region = "US";
+              amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_05 %>";
+              amzn_assoc_default_category = "All";
+              amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
+              amzn_assoc_design = "in_content";
+              </script>
+              <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
             </div>
           </div>
         </div>
@@ -156,6 +229,21 @@
               <p><%= @recommend.sub_intro_06 %></p>
               <div class="btn clearfix">
                 <em>$<%= @recommend.sub_price_06 %></em><a target="_blank" href="<%= @recommend.sub_link_06 %>">Buy Now</a>
+              </div>
+              <div class="related">
+               <script type="text/javascript">
+                amzn_assoc_placement = "adunit0";
+                amzn_assoc_tracking_id = "3628-20";
+                amzn_assoc_ad_mode = "search";
+                amzn_assoc_ad_type = "smart";
+                amzn_assoc_marketplace = "amazon";
+                amzn_assoc_region = "US";
+                amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_06 %>";
+                amzn_assoc_default_category = "All";
+                amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
+                amzn_assoc_design = "in_content";
+                </script>
+                <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
               </div>
             </div>
           </div>
@@ -181,6 +269,21 @@
               <div class="btn clearfix">
                 <em>$<%= @recommend.sub_price_07 %></em><a target="_blank" href="<%= @recommend.sub_link_07 %>">Buy Now</a>
               </div>
+              <div class="related">
+               <script type="text/javascript">
+                amzn_assoc_placement = "adunit0";
+                amzn_assoc_tracking_id = "3628-20";
+                amzn_assoc_ad_mode = "search";
+                amzn_assoc_ad_type = "smart";
+                amzn_assoc_marketplace = "amazon";
+                amzn_assoc_region = "US";
+                amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_07 %>";
+                amzn_assoc_default_category = "All";
+                amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
+                amzn_assoc_design = "in_content";
+                </script>
+                <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+              </div>
             </div>
           </div>
         <% end %>
@@ -204,6 +307,21 @@
               <p><%= @recommend.sub_intro_08 %></p>
               <div class="btn clearfix">
                 <em>$<%= @recommend.sub_price_08 %></em><a target="_blank" href="<%= @recommend.sub_link_08 %>">Buy Now</a>
+              </div>
+              <div class="related">
+               <script type="text/javascript">
+                amzn_assoc_placement = "adunit0";
+                amzn_assoc_tracking_id = "3628-20";
+                amzn_assoc_ad_mode = "search";
+                amzn_assoc_ad_type = "smart";
+                amzn_assoc_marketplace = "amazon";
+                amzn_assoc_region = "US";
+                amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_08 %>";
+                amzn_assoc_default_category = "All";
+                amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
+                amzn_assoc_design = "in_content";
+                </script>
+                <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
               </div>
             </div>
           </div>
@@ -229,6 +347,21 @@
               <div class="btn clearfix">
                 <em>$<%= @recommend.sub_price_09 %></em><a target="_blank" href="<%= @recommend.sub_link_09 %>">Buy Now</a>
               </div>
+              <div class="related">
+               <script type="text/javascript">
+                amzn_assoc_placement = "adunit0";
+                amzn_assoc_tracking_id = "3628-20";
+                amzn_assoc_ad_mode = "search";
+                amzn_assoc_ad_type = "smart";
+                amzn_assoc_marketplace = "amazon";
+                amzn_assoc_region = "US";
+                amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_09 %>";
+                amzn_assoc_default_category = "All";
+                amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
+                amzn_assoc_design = "in_content";
+                </script>
+                <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+              </div>
             </div>
           </div>
         <% end %>
@@ -253,12 +386,41 @@
               <div class="btn clearfix">
                 <em>$<%= @recommend.sub_price_10 %></em><a target="_blank" href="<%= @recommend.sub_link_10 %>">Buy Now</a>
               </div>
+              <div class="related">
+               <script type="text/javascript">
+                amzn_assoc_placement = "adunit0";
+                amzn_assoc_tracking_id = "3628-20";
+                amzn_assoc_ad_mode = "search";
+                amzn_assoc_ad_type = "smart";
+                amzn_assoc_marketplace = "amazon";
+                amzn_assoc_region = "US";
+                amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_10 %>";
+                amzn_assoc_default_category = "All";
+                amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
+                amzn_assoc_design = "in_content";
+                </script>
+                <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+              </div>
             </div>
           </div>
         <% end %>
     
       </div><!--./wrap-->
     </div><!--./cu_wrap-->
+
+    <div class="wrap">
+      <div class="show_more_box">
+        <h2>More Featured</h2>
+        <% @recommends.each do |recommend| %>
+          <div class="show_more_ctn">
+            <%= link_to (image_tag recommend.re_image), recommend %>
+            <em><%= recommend.re_filter %></em>
+            <h3><%= link_to recommend.re_title, recommend %></h3>
+            <p><%= link_to recommend.re_intro, recommend %></p>
+          </div>
+        <% end %>
+      </div>
+    </div>
     
     <!-- Loading 
     <div class="loading">
