--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -47,6 +47,186 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="37" data-price="21.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NefClj"><img src="https://images-na.ssl-images-amazon.com/images/I/41vGmSSapkL._SX679_.jpg" alt="Wemo Mini Smart Plug" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>7,625 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>37% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NefClj">Wemo Mini Smart Plug, WiFi Enabled, Works with Alexa, Google Assistant & Apple HomeKit</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$21.98</span><span class="ori_price">$34.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NefClj">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xw3DUh"><img src="https://images-na.ssl-images-amazon.com/images/I/61OBcHa4VmL._SY879_.jpg" alt="APC 11-Outlet Surge Protector Power Strip" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,124 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xw3DUh">APC 11-Outlet Surge Protector Power Strip with USB Charging Ports, 2880 Joules, SurgeArrest Home/Office (P11U2)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xw3DUh">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="184.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RC7WYK"><img src="https://images-na.ssl-images-amazon.com/images/I/81aQTxxcCJL._SX522_.jpg" alt="PCI-E Graphics Card Graphic Cards" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>172 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RC7WYK">Sapphire 11265-05-20G Radeon Pulse RX 580 8GB GDDR5 Dual HDMI/ DVI-D/ Dual DP OC with Backplate (UEFI) PCI-E Graphics Card Graphic Cards</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$184.99</span><span class="ori_price">$309.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RC7WYK">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="187.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XwxYSt"><img src="https://images-na.ssl-images-amazon.com/images/I/61%2BORVqZ0CL._SX522_.jpg" alt="HP 27er 27-in IPS LED Backlit Monitor" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,214 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XwxYSt">HP 27er 27-in IPS LED Backlit Monitor</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$187.99</span><span class="ori_price">$249.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XwxYSt">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="44" data-price="99.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FtLbBt"><img src="https://images-na.ssl-images-amazon.com/images/I/71r1E7x7PlL._SX522_.jpg" alt="ASUS LED Monitor" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>2,526 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>44% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FtLbBt">ASUS VS228H-P 21.5" Full HD 1920x1080 HDMI DVI VGA Back-lit LED Monitor</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$99.99</span><span class="ori_price">$179.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FtLbBt">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="53.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Nf8chW"><img src="https://images-na.ssl-images-amazon.com/images/I/51D3-2lQu7L._SX522_.jpg" alt="Logitech G Gaming Driving Force Shifter" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>442 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Nf8chW">Logitech G Gaming Driving Force Shifter – Compatible with G29 and G920 Driving Force Racing Wheels for Playstation 4, Xbox One, and PC</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$53.95</span><span class="ori_price">$79.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Nf8chW">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="36" data-price="44.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NeUSKm"><img src="https://images-na.ssl-images-amazon.com/images/I/71rtAIZIW3L._SX679_.jpg" alt="Logitech G213 Gaming Keyboard" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>500 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>36% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NeUSKm">Logitech G213 Gaming Keyboard with Dedicated Media Controls, 16.8 Million Lighting Colors Backlit Keys, Spill-Resistant and Durable Design</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$44.50</span><span class="ori_price">$69.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NeUSKm">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="39" data-price="109.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RB1mSk"><img src="https://images-na.ssl-images-amazon.com/images/I/71ldFr7RAkL._SX522_.jpg" alt="CORSAIR K70 RGB MK.2 SE Mechanical RAPIDFIRE Gaming Keyboard" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>555 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RB1mSk">CORSAIR K70 RGB MK.2 SE Mechanical RAPIDFIRE Gaming Keyboard - USB Passthrough & Media Controls - PBT Double-Shot Keycaps - Cherry MX Speed - RGB LED Backlit</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$109.99</span><span class="ori_price">$179.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RB1mSk">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="899.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FzNO4B"><img src="https://images-na.ssl-images-amazon.com/images/I/61M2ZBdv1%2BL._SX522_.jpg" alt="Microsoft Surface Pro 6" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>301 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FzNO4B">Microsoft Surface Pro 6 (Intel Core i5, 8GB RAM, 128GB) - Newest Version and Microsoft Surface Pro Type Cover – Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$899.00</span><span class="ori_price">$1,129.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FzNO4B">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="19" data-price="18.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xw5NmN"><img src="https://m.media-amazon.com/images/I/6149LTqv1AL._AC_UL436_.jpg" alt="SanDisk Ultra Flair 128GB USB" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>3,660 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>19% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xw5NmN">SanDisk Ultra Flair 128GB USB 3.0 Flash Drive - SDCZ73-128G-G46</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$18.99</span><span class="ori_price">$23.40</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xw5NmN">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card dealofday clearfix" data-score="39" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2JaKhL2"><img src="https://images-na.ssl-images-amazon.com/images/I/816isHv9j0L._AC_SR300,300_.jpg" alt="Amazon Deal Of The Day" /></a>
