--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -39,7 +39,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .code_btn{margin-top:30px;}
 
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap{margin-bottom:20px;}
-.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap a{color:#ccc;background:none;padding:0;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap a{color:#a6a6a6;background:none;padding:0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box{float:left;width:48%;margin:1%;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,.06);padding:10px 5px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .line_three{width:31.33%;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .tax_box{float:left;width:23%;margin:1%;}
@@ -56,7 +56,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .end_soon{font-size:17px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em a.keyword{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:200px;overflow:hidden;word-break:break-word;font-size:13px;display:inline-block;line-height:1;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box{margin-bottom:10px;}
-.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span{display:block;font-size:12px;color:#ccc;margin-left:15px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span{display:block;font-size:12px;color:#a6a6a6;margin-left:15px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span ul{margin-left:10px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span ul li{list-style:disc;}
 /*.show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span a{color:#08f;}*/
