--- a/app/views/promocodes/index.html.erb
+++ b/app/views/promocodes/index.html.erb
@@ -6,7 +6,7 @@
     <%= render 'promocodes/header' %>  
     <div class="more_search"><%= form_for "",url: promocodes_path, role: "search", method: :get do %><%= text_field_tag :search, @search_term, placeholder: "Search..." %><% end %></div>
 
-    <!-- <% render 'shared/amz_slider' %> -->
+    <!-- < render 'shared/amz_slider' > -->
 
     <div id="promocodes" class="clearfix">
       <%= render @promocodes %> 
