--- a/app/views/shared/_amz_slider.html.erb
+++ b/app/views/shared/_amz_slider.html.erb
@@ -1,12 +1,15 @@
 <div class="slider" id="slider">
   <div class="slide" id="slide">
 
-    <!-- <div class="img_box">
-      <a target="_blank" href="Page_Link">
-        <img class="item" src="Image_URL">
-        <p>About_This</p>
-      </a>
-    </div> -->
+    <!-- <div class="img_box"><a target="_blank" href="Page_Link"><img class="item" src="Image_URL"><p>About_This</p></a></div> -->
+
+    <div class="img_box"><a target="_blank" href="https://amzn.to/2rG9B7b"><img class="item" src="https://images-na.ssl-images-amazon.com/images/I/61C0-NtP-SL._AC_SR300,300_.jpg"><p>Save up to 39% off on Garmin Smart Watches</p></a></div>
+
+    <div class="img_box"><a target="_blank" href="https://amzn.to/2Pv0fnT"><img class="item" src="https://images-na.ssl-images-amazon.com/images/I/81pqZIO5C4L._AC_SR300,300_.jpg"><p>Save up to 35% off on Select LG Smart 4K TVs</p></a></div>
+
+    <div class="img_box"><a target="_blank" href="https://amzn.to/34sDqp5"><img class="item" src="https://images-na.ssl-images-amazon.com/images/I/71KAWkgW9eL._AC_SR300,300_.jpg"><p>Save up to $500 on Select Sony 4K Ultra HD Smart LED TVs</p></a></div>
+
+    <div class="img_box"><a target="_blank" href="https://amzn.to/2RW9r6g"><img class="item" src="https://m.media-amazon.com/images/I/81jwX8qBb+L._AC_UL320_ML3_.jpg"><p>Save up to 50% off on "everlane jeans"</p></a></div>
     
     <div class="img_box">
       <a target="_blank" href="https://amzn.to/36yZmA4">
