--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -257,7 +257,7 @@
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
 
   .codes .card_wrap .card .inner>.code_high .info_wrap{}
-  .codes .card_wrap .card .inner>.code_high .info_wrap .box{float:left;width:23%;margin:1%;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,.06);padding:5px;}
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box{float:left;width:23%;margin:2px;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,.06);padding:5px 0;}
   .codes .card_wrap .card .inner>.code_high .info_wrap .box p{font-size:12px;margin:5px;color:#6d6e71;}
   .codes .card_wrap .card .inner>.code_high .info_wrap .box em{font-size:15px;}
 
