--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -8,7 +8,7 @@
 .gadgets .card_wrap .card-body{position:relative;padding:5px;font-family: 'Montserrat', sans-serif;font-weight:100;}
 .gadgets .card_wrap .card-body span{border-bottom:1px solid #ccc;width:55%;display:inline;color:#616161;text-transform:uppercase;}
 .gadgets .card_wrap .card-body .to_featured{float:right;margin-right:1%;text-decoration:none;color:#fff;background:#ff4d4d;border-radius:10px;padding:0 10px;}
-.gadgets .card_wrap .card-body h4{margin-top:10px;font-weight:100;line-height:1.4;height: 3.5em;overflow: hidden;display:block;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-word;-webkit-box-orient:vertical;-webkit-line-clamp:2;}
+.gadgets .card_wrap .card-body h4{margin-top:10px;font-weight:100;line-height:1.2;height:3.2em;overflow: hidden;display:block;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-word;-webkit-box-orient:vertical;-webkit-line-clamp:2;}
 .gadgets .card_wrap .card-body h4 a{text-decoration:none;color:#616161;font-size:20px;}
 .gadgets .card_wrap .card-body p{margin:10px 0;font-weight:300;color:#616161;}
 .gadgets .card_wrap .card-body .btn{margin:10px 0;display:none;}
@@ -36,7 +36,7 @@
   .gadgets .card_wrap .card-body .admin{margin-top:-10px;}
   .gadgets .card_wrap .card-header{padding:5px;}
   .gadgets .card_wrap .card-body{padding:10px;}
-  .gadgets .card_wrap .card-body h4{margin:15px 0;}
+  .gadgets .card_wrap .card-body h4{margin:15px 0;height:4em;}
   .gadgets .card_wrap .card-body .pinterest{display:none;}
   .gadgets .card_wrap .start{top:-45px;}
   .add_gadget img{width:40px;}
